# jpeg-filter-prototype

./: .gitignore  README.md  pyproject.toml
arduino_hcsr04/: arduino_hcsr04.ino
jpeg_filter_prototype/: _audiocapture.py  _audiolist.py  _videocapture.py  filter.py  filter_blendvideo.py  filter_canny.py  filter_common.py  filter_distance.py  filter_overlayaudio.py  filter_overlayaudiocallback.py  filter_perspective.py  filter_rotation.py  filter_rotation2.py  filter_superpixel.py  filter_thinning.py  filter_uzumaki.py  image_transfer.py  receiver.py  runner.py  sender.py
